--- a/ml_container/Dockerfile
+++ b/ml_container/Dockerfile
@@ -5,11 +5,11 @@ FROM python:3.9-slim-bullseye
 WORKDIR /app
 
 # Copy only the dependency file and install packages
-COPY requirements_ml.txt .
-RUN pip install --no-cache-dir -r requirements_ml.txt
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy your model generation code into the container
-COPY generate_model.py .
+COPY model_creation.py .
 
 # Run the model generation script on container start
 CMD ["python", "model_creation.py"]
