--- a/ml_container/Dockerfile
+++ b/ml_container/Dockerfile
@@ -1,15 +1,14 @@
-# Use a lightweight Python image
 FROM python:3.9-slim-bullseye
 
-# Set the working directory
+# Set working directory inside the container
 WORKDIR /app
 
-# Copy only the dependency file and install packages
+# Copy the requirements file and install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy your model generation code into the container
-COPY model_creation.py .
+# Copy the ML model script into the container
+COPY generate_model.py .
 
-# Run the model generation script on container start
-CMD ["python", "model_creation.py"]
+# Run the script automatically when the container starts
+CMD ["python", "generate_model.py"]
