--- a/frontend_container/Dockerfile
+++ b/frontend_container/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+COPY templates/ templates/
+
 # Copy your Flask application code
 COPY recommender_app.py .
 
