Add Web UI and expose port to server IP

--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: isaac-playlists-recommender-service
   namespace: isaac
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: isaac-playlists-recommender-frontend
   ports:
